Resolves: fdo#50855 Nimbus Sans L missing styles

Change-Id: Ie8cdcf4ad0ffe52024fd5cfe33073abfc6aadca8